2004-10-29  Stefan Jahn  <stefan@lkcc.org>

	* netdefs.h, qucsdefs.h: Two new files generalizing netlist
	handling (for new converter program).

2004-10-27  Stefan Jahn  <stefan@lkcc.org>

	* nasolver.cpp: New 'steepest descent' convergence helper
	implemented.  Seems like working fine...

	* tvector.cpp: Implemented new element-wise *, scalar +/-,
	comparisons and sum() operators.

	* complex.cpp: Added <= and >= operators.

2004-10-25  Stefan Jahn  <stefan@lkcc.org>

	* dcsolver.cpp, trsolver.cpp: Using new nodeset functionality.

	* net.cpp: Added the appropriate nodeset functionality.

	* nasolver.cpp: Added function which can save the nodeset list
	of the netlist into the component nodes.

	* input.cpp: Creating nodesets in the component factory and
	adding them to the netlist.

	* nodeset.h (class nodeset): Implemented base class for
	nodeset functionality.

	* tmatrix.cpp: New function isFinite() implemented.

	* nodelist.cpp: Created array of nodes for faster access
	to enumerated nodes.

	* nasolver.cpp: Fixpoint iterations possible.

	* eqnsys.cpp: Implemented code for consecutive solutions
	of equation systems using LU decomposition.

2004-10-23  Stefan Jahn  <stefan@lkcc.org>

	* matvec.cpp: Fixed bug in copy constructor.

2004-10-21  Stefan Jahn  <stefan@lkcc.org>

	* tmatrix.h (class tmatrix), tvector.h (class tvector): Fixed
	template functionality to be ISO C++ compliant.

	* trsolver.cpp: Using line search fallback if the initial DC
	analysis failed to converge.

	* matvec.cpp: Fixed compiler (gcc 3.4.2) error in constructor
	and copy constructor.

2004-10-19  Stefan Jahn  <stefan@lkcc.org>

	* circuit.cpp (transientCapacitance): Fixed compiler warning.

2004-10-17  Stefan Jahn  <stefan@lkcc.org>

	* trsolver.cpp: Run inititialization routine also for created
	circuits.

2004-10-16  Stefan Jahn  <stefan@lkcc.org>

	* circuit.cpp (transientCapacitance): Readjusted the code for
	a single integration step for controlled capacitances.
