@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: opamp.h,v 1.1 2004-11-01 10:56:17 ela Exp $
+ * $Id: opamp.h,v 1.2 2004-11-10 20:26:37 ela Exp $
  *
  */
 
@@ -29,10 +29,15 @@ class opamp : public circuit
 {
  public:
   opamp ();
-  void initSP (void);
+  void calcSP (nr_double_t);
   void initDC (void);
+  void calcDC (void);
   void initAC (void);
   void initTR (void);
+  void calcTR (nr_double_t);
+
+ private:
+  nr_double_t gv;
 };
 
 #endif /* __OPAMP_H__ */
